Sell ki halat boht buri hai...OUT OF SCOPE

--- a/Project/Angular/EquityTradingSimulationFrontEnd/src/app/Components/current-position/current-position.component.html
+++ b/Project/Angular/EquityTradingSimulationFrontEnd/src/app/Components/current-position/current-position.component.html
@@ -16,14 +16,14 @@
 		</tr>
 	</thead>
 	<tbody>     
-		<tr class="table-light" *ngFor = "let e of list">
-			<td>{{e.Stock_Name}} ({{e.Symbol}})</td>
-			<td>{{e.Quantity}}</td>
-			<td>{{e.Buying_Price | number : '1.2-2' }}</td>
-			<td>{{e.Current_Price | number : '1.2-2' }}</td>
-			<td>{{e.Total_Value | number : '1.2-2' }}</td>
+		<tr class="table-light" *ngFor = "let order of list">
+			<td>{{order.Stock_Name}} ({{order.Symbol}})</td>
+			<td>{{order.Quantity}}</td>
+			<td>{{order.Buying_Price | number : '1.2-2' }}</td>
+			<td>{{order.Current_Price | number : '1.2-2' }}</td>
+			<td>{{order.Total_Value | number : '1.2-2' }}</td>
 			<td>
-				<a routerLink="/Trader/Sell" >  <button type="button" class="btn btn-warning" (click)="Sell(s)">Sell</button></a>
+				<a routerLink="/Trader/Sell" >  <button type="button" class="btn btn-warning" (click)="Sell(order)">Sell</button></a>
 			</td>
 		</tr> 
 	</tbody>
