--- a/Project/Angular/EquityTradingSimulationFrontEnd/src/app/Components/trader/trader.component.html
+++ b/Project/Angular/EquityTradingSimulationFrontEnd/src/app/Components/trader/trader.component.html
@@ -19,6 +19,12 @@
 				<li class="nav-item">
 					<a class="nav-link" routerLink="CurrentPosition">Current Position</a>
 				</li>
+				<li class="nav-item">
+					<a class="nav-link" routerLink="PendingBlocks">Blocks</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" routerLink="History">Transaction History</a>
+				</li>
 			</ul>
 
 			<div [hidden]="!x">
