--- a/Project/Angular/EquityTradingSimulationFrontEnd/src/app/Components/sell-request/sell-request.component.html
+++ b/Project/Angular/EquityTradingSimulationFrontEnd/src/app/Components/sell-request/sell-request.component.html
@@ -1,13 +1,14 @@
 <div class="container">
   
-    <div class="row"><h1>Sell Order</h1></div>
-      <div class="form-group">
-          <strong>Stock Name : </strong><label id="n" name="n">{{order.Name}}</label><br>
-          <strong>Quantity Held : </strong><label id="q" name="qty">{{order.VolumeAvailable}}</label><br><br><br>
+    <h1>Sell Order</h1>
+      <div>
+          <strong>Stock Name: </strong>{{order.StockName}} ({{order.StockSymbol}})<br />
+		  <strong>Quantity Held: </strong>{{order.TotalQuantity}}<br />
+		  <strong>Average Buying Price: </strong>{{order.AvgBuyingPrice | currency:'INR':'symbol' }}<br />
+		  <strong>Current Stock Price: </strong>{{order.CurrentPrice | currency:'INR':'symbol' }}<br /><br /><br />
       </div>
        
-    <form novalidate [formGroup]="sell" class="form-horizontal" >
-        <input type="number" name="StocksId" formControlName="StocksId" hidden required />			
+    <form novalidate [formGroup]="sell" class="form-horizontal" >		
         <div class="form-group">
           <label class="control-label col-sm-2" for="Quantity">Quantity:</label>
             <div class="col-sm-10">
@@ -59,8 +60,8 @@
   
         <div class="form-group">
           <div class="col-sm-offset-2 col-sm-10">
-            <button type="submit" class="btn btn-default"  (click)="onSubmit(sell)">Submit</button>
-            <button class="btn btn-default">Reset</button>
+            <button type="submit" class="btn" (click)="onSubmit(sell)">Submit</button>
+            <input type="reset" class="btn" value="Reset" />
           </div>
         </div>
      </form>
