Block Creation Routes and Block Changes for Addition

--- a/Project/Angular/EquityTradingSimulationFrontEnd/src/app/Components/block-ex/block-ex.component.html
+++ b/Project/Angular/EquityTradingSimulationFrontEnd/src/app/Components/block-ex/block-ex.component.html
@@ -18,7 +18,7 @@
             <td>{{b.BlockId}}</td>
             <td >{{b.BlockStatus}}</td>
             <td>{{b.BlockSide}}</td>
-            <td>{{b.StocksName}}</td>
+            <td>{{b.StockName}}</td>
             <td>{{b.OrderType}}</td>
             <td>{{b.Quantity}}</td>
             <td><input type="button" value="Execute" class="btn btn-outline-primary" (click)="executepending(b.BlockId)" /></td>
